<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffd2daff">

<!--Se declara un LinearLayout en donde se mostrara un TextView-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desarrolladores"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff010101" />



<!--Se declara un LinearLayout y dentro una ImageView y TextView-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/imageView3"
                android:background="@drawable/na"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="#ff292929" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna1"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="#ff292929"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna2"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="#ff292929"/>
        </LinearLayout>

        <!--Se declara un LinearLayout y dentro un ImageView y dentro TextView´s-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#ff292929">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/imageView4"
                android:background="@drawable/re"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna3"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="#ff292929"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna4"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="#ff292929"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna5"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="#ff292929"/>

            <!--Se declara un LinearLayout y dentro un Button para salir de la Vista-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#ff292929">

                <Button
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_regresar"
                    android:onClick="regresar"
                    android:layout_weight="0.15"
                    android:background="@drawable/flecha" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>