<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".principal"
    android:orientation="vertical"
    android:background="#ffd2daff">

    <!--Declaramos un LinearLayout y dentro un ImageView que muestra el login-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/login"
        android:layout_gravity="center_horizontal"
        android:contentDescription=""
        android:layout_marginTop="10dp"/>

    <!--Declaramos un LinearLayout y dentro el EditText para ingresar el usuario-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Usuario"
        android:ems="10"
        android:hint="@string/Usuario"
        android:textStyle="italic"
        android:textSize="30dp"
        android:background="#ffe1e1e1"><requestFocus/>

    </EditText>

    <!--Declaramos un LinearLayout y dentro el EditText para ingresar el password del usuario-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textStyle="italic"
        android:textSize="30dp"
        android:layout_marginTop="15dp"
        android:background="#ffe1e1e1">
        <requestFocus/>
    </EditText>

    <!--Declaramos un LinearLayout y dentro el boton que nos llevara
            a la siguiente actividad para ingresar al menu-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnIngresar"
        android:text="@string/Ingresar"
        android:onClick="login"
        android:layout_gravity="center_horizontal"
        android:textColor="#fffafafa"
        android:background="#ff0c80ec"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>
</LinearLayout>
